--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ h4 {
     margin-left: auto;
     margin-right: auto;
     margin-top: 1em;
-    margin-bottom: 1em;
+    margin-bottom: .5em;
 }
 
 p {
