--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ html, body {
 
   .inner-header1 {
     display: block;
-    height: 65vh;
+    height: auto;
     width:100%;
     margin-left: auto;
     margin-right: auto;
