--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 h1 {
     font-family: 'Poppins', sans-serif;
-    font-size: 110px;
+    font-size: 7em;
     color: white;
     font-weight: bold;
-    margin-top: 10vh;
+    margin-top: 3vh;
     margin-bottom: -0.1vh;
     margin-left: 3vw;
     line-height: 1em;
@@ -11,7 +11,7 @@ h1 {
 
 h2 {
     font-family: 'Poppins', sans-serif;
-    font-size: 35px;
+    font-size: 2em;
     color:white;
     font-weight: lighter;
     margin-top: 4px;
@@ -21,7 +21,7 @@ h2 {
 
 h3 {
     font-family: 'Poppins', sans-serif;
-    font-size: 20px;
+    font-size: 1.25em;
     color:#C20879;
     font-weight: lighter;
     margin-left: 3vw;
@@ -72,18 +72,25 @@ html, body {
     text-align: center;
   }
 
-  .inner-header1 {
+  .inner-header {
     display: block;
-    height: 30em;
+    height: max-content;
     width:100%;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 60px;
-    padding-bottom: 5px;
+    padding-top: 3vh;
+    padding-bottom: 5vh;
     background-color: black;
     background-size: cover;
 }
-
+.header-img {
+    width: 45%; 
+    float: right;
+    margin-top: 3vh;
+    margin-right: 3vw;
+    margin-left: 1vw;
+    padding: 0px;
+}
 .prose {
     position:relative;
     text-align:center;
@@ -110,6 +117,29 @@ html, body {
     margin: auto;
     min-height: min-content;
 }
+
+.fries-def {
+    position:relative;
+    text-align:center;
+}
+
+.horizontal-scroll{
+    overflow-x: scroll;
+    overflow-y: hidden;
+    white-space: nowrap;
+    -webkit-overflow-scrolling: touch;
+}
+
+.column{
+    display: inline-block;
+}
+
+.movie-container {
+    display: flex;
+    overflow-x: auto;
+    height: 50vh;
+}
+
 /* Next & previous buttons */
 .prev, .next {
     display: block;
